--- a/wpff_lab2_oop/MainWindow.xaml
+++ b/wpff_lab2_oop/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="wpff_lab2_oop.MainWindow"
+﻿<Window x:Name="main" x:Class="wpff_lab2_oop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,34 +8,40 @@
         Title="MainWindow" Height="600" Width="400" SizeToContent="WidthAndHeight">
     <Grid>
         <Grid>
-            <Grid Height="599" Width="400" Margin="0,-2,0,0">
+            <Grid x:Name="grid" Height="599" Width="400" Margin="0,-2,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="143*"/>
-                    <ColumnDefinition Width="257*"/>
+                    <ColumnDefinition Width="35*"/>
+                    <ColumnDefinition Width="222*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Button" Height="66" Margin="10,10,0,0" VerticalAlignment="Top" Width="100"/>
-                <Button Content="CE" HorizontalAlignment="Left" Height="66" Margin="0,224,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"/>
-                <Button Content="C" HorizontalAlignment="Left" Height="66" Margin="100,224,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="Button_Click"/>
-                <Button Content="⌫" HorizontalAlignment="Left" Height="66" Margin="57,224,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="÷" HorizontalAlignment="Left" Height="66" Margin="157,224,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="7" Height="66" VerticalAlignment="Top" Margin="0,295,43,0" Click="Button_Click"/>
-                <Button Content="8" HorizontalAlignment="Left" Height="66" Margin="100,295,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="Button_Click" />
-                <Button Content="9" HorizontalAlignment="Left" Height="66" Margin="57,295,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="×" HorizontalAlignment="Left" Height="66" Margin="157,295,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="4" HorizontalAlignment="Left" Height="66" Margin="0,366,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"/>
-                <Button Content="5" HorizontalAlignment="Left" Height="66" Margin="100,366,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="Button_Click"/>
-                <Button Content="6" HorizontalAlignment="Left" Height="66" Margin="57,366,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="-" HorizontalAlignment="Left" Height="66" Margin="157,366,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="1" Height="66" Margin="0,437,43,0" VerticalAlignment="Top" Click="Button_Click"/>
-                <Button Content="2" HorizontalAlignment="Left" Height="66" Margin="100,437,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="Button_Click"/>
-                <Button Content="3" HorizontalAlignment="Left" Height="66" Margin="57,437,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="+" HorizontalAlignment="Left" Height="66" Margin="157,437,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="00" Height="66" Margin="0,508,43,0" VerticalAlignment="Top" Click="Button_Click"/>
-                <Button Content="0" HorizontalAlignment="Left" Height="66" Margin="100,508,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2" Click="Button_Click"/>
-                <Button Content="." HorizontalAlignment="Left" Height="66" Margin="57,508,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <Button Content="=" HorizontalAlignment="Left" Height="66" Margin="157,508,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="1" Click="Button_Click"/>
-                <TextBox x:Name="window" HorizontalAlignment="Left" Height="80" Margin="0,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="2"/>
-                <TextBox x:Name="window_2" HorizontalAlignment="Left" Height="50" Margin="107,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Grid.Column="1"/>
+                <Button Content="≡" Height="60" Margin="0,10,83,0" VerticalAlignment="Top" Click="ScienceMode_Click"/>
+                <Button x:Name="_1" Content="CE" HorizontalAlignment="Left" Height="66" Margin="0,224,0,0" VerticalAlignment="Top" Width="100" Click="AdvanceOperations_Click"/>
+                <Button x:Name="_2" Content="C" HorizontalAlignment="Left" Height="66" Margin="100,224,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="3" Click="AdvanceOperations_Click"/>
+                <Button x:Name="_3" Content="⌫" HorizontalAlignment="Left" Height="66" Margin="22,224,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="AdvanceOperations_Click"/>
+                <Button x:Name="_4" Content="÷" HorizontalAlignment="Left" Height="66" Margin="122,224,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click"/>
+                <Button x:Name="_5" Content="7" Height="66" VerticalAlignment="Top" Margin="0,295,0,0" Click="Button_Click" HorizontalAlignment="Left" Width="100"/>
+                <Button x:Name="_6" Content="8" HorizontalAlignment="Left" Height="66" Margin="100,295,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="3" Click="Button_Click" />
+                <Button x:Name="_7" Content="9" HorizontalAlignment="Left" Height="66" Margin="22,295,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Button_Click"/>
+                <Button x:Name="_8" Content="×" HorizontalAlignment="Left" Height="66" Margin="122,295,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click"/>
+                <Button x:Name="_9" Content="4" HorizontalAlignment="Left" Height="66" Margin="0,366,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"/>
+                <Button x:Name="_10" Content="5" HorizontalAlignment="Left" Height="66" Margin="100,366,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="3" Click="Button_Click"/>
+                <Button x:Name="_11" Content="6" HorizontalAlignment="Left" Height="66" Margin="22,366,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Button_Click"/>
+                <Button x:Name="_12" Content="-" HorizontalAlignment="Left" Height="66" Margin="122,366,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click"/>
+                <Button x:Name="_13" Content="1" Height="66" Margin="0,437,43,0" VerticalAlignment="Top" Click="Button_Click"/>
+                <Button x:Name="_14" Content="2" HorizontalAlignment="Left" Height="66" Margin="100,437,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="3" Click="Button_Click"/>
+                <Button x:Name="_15" Content="3" HorizontalAlignment="Left" Height="66" Margin="22,437,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Button_Click"/>
+                <Button x:Name="_16" Content="+" HorizontalAlignment="Left" Height="66" Margin="122,437,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click"/>
+                <Button x:Name="_17" Content="00" Height="66" Margin="0,508,43,0" VerticalAlignment="Top" Click="Button_Click"/>
+                <Button x:Name="_18" Content="0" HorizontalAlignment="Left" Height="66" Margin="100,508,0,0" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="3" Click="Button_Click"/>
+                <Button x:Name="_19" Content="." HorizontalAlignment="Left" Height="66" Margin="22,508,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Button_Click"/>
+                <Button x:Name="_20" Content="=" HorizontalAlignment="Left" Height="66" Margin="122,508,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click"/>
+                <TextBox x:Name="window" Text="0"  HorizontalAlignment="Left" Height="80" Margin="0,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Grid.ColumnSpan="3"/>
+                <TextBox x:Name="window_2" HorizontalAlignment="Left" Height="50" Margin="72,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Grid.Column="2"/>
+                <Button x:Name="pi" Content="π" HorizontalAlignment="Left" Height="66" Margin="222,224,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Button_Click" Visibility="Hidden"/>
+                <Button x:Name="exp" Content="e" HorizontalAlignment="Left" Height="66" Margin="222,295,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click" Visibility="Hidden"/>
+                <Button x:Name="sqrt" Content="√" HorizontalAlignment="Left" Height="66" Margin="222,366,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click" Visibility="Hidden"/>
+                <Button x:Name="pow" Content="^" HorizontalAlignment="Left" Height="66" Margin="222,437,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click" Visibility="Hidden"/>
+                <Button x:Name="ln" Content="ln" HorizontalAlignment="Left" Height="66" Margin="222,508,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.524,2.268" Grid.Column="2" Click="Operation_Click" Visibility="Hidden"/>
             </Grid>
         </Grid>
 
